	would not be interrupted by SIGALRM.
	(tino_alarm_set): Special case: If callback is NULL, the
	user-pointer is defining if the alarm is a one shot (not NULL) or
	continously running (user=NULL).  This can be used to generate
	regular EINTR events.  (Actually implemented in tino_alarm_run())
	(tino_alarm_sort): improved sorting
	(tino_alarm_run): improvment when time warps backward

2007-03-26    <tino@firebird.03.softkill.net>

	* log.h (tino_log_file): corrected to use tino_file_realpath()

	* filetool.h (tino_file_dirfileoffset): descriptive comment added
	(tino_file_is_rooted): added
	(tino_file_getcwd_buf, tino_file_getcwd): added.  This is in
	filetool.h as it need tino_alloc().  Peraps it will be moved into
	file.h later (which is compatible to old includes, as filetool.h
	includes file.h).
	(tino_file_realpath_buf): formerly known as tino_file_realpath
	(tino_file_realpath): added
	(tino_file_realpath_cwd): my own realpath() evaluation added.

2007-03-03    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp): MIN and MAX handling for
	TINO_GETOPT_FLAG added
	(tino_getopt_parse): structural changes (direct return instead
	setting pos=-1), now returns below -1, too.
	(tino_getopt_var_print): removed as it already was commented out
	and of no use
	(tino_getopt_usage): min-max printing added, usage only printed if
	HELP option present
	(tino_getopt_parse): bugfix: First option was never tested since
	the bigger rewrite.  As I always have HELP as the first option,
	this was not noticed by me.

2007-01-28    <tino@firebird.03.softkill.net>

	* Makefile.proto (static): diet fixes (still not complete)

	* syscap.h: added for conditional compiles

	* sock.h: sysfix.h added and TINO_F_ protoypes

	* sock_tool.h (tino_sock_wrap): moved from sock.h as it needs
	file.h

	* file.h (tino_file_stat, tino_file_lstat, tino_file_stat_fd):
	System Fixes for CYGWIN: uses new TINO_F_ and TINO_T_ defines

	* sysfix.h: sysfix_cygwin.h now included
